Fix pagination and spacing

--- a/source/css/pages/_post.scss
+++ b/source/css/pages/_post.scss
@@ -1,4 +1,6 @@
 .post-body {
+  padding-top: $base-spacing;
+  
   img {
     max-width: 100%;
     margin: $base-spacing * 2 0;
@@ -11,3 +13,4 @@
 .post-meta {
   margin: $base-spacing 0;
 }
+
